--- a/hw3/hw3_classification.ipynb
+++ b/hw3/hw3_classification.ipynb
@@ -59,7 +59,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "293c8170-67aa-4b92-9a84-ffa0b3d5880f",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -83,6 +89,7 @@
    "id": "9f4f8fa1",
    "metadata": {
     "deletable": false,
+    "editable": false,
     "nbgrader": {
      "cell_type": "code",
      "checksum": "30347d5ed1e8164b2c06eb48609ba2cc",
@@ -92,7 +99,11 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    }
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
